--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.header {
+  border-bottom: 1px solid #afafaf;
+}
+
 .navigation {
   display: flex;
   justify-content: space-between;
@@ -124,6 +128,9 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
 
   border: 2px solid orange;
   border-radius: 10px;
@@ -149,10 +156,9 @@ body {
 }
 
 .portfolio-title {
-  margin-bottom: 100px;
-  margin-top: 100px;
+  margin: 15px 0;
   text-align: center;
-  font-size: 64px;
+  font-size: 1.5rem;
 }
 
 .portfolio-grid {
@@ -215,7 +221,7 @@ body {
 
 .about-title {
   text-align: center;
-  font-size: 64px;
+  font-size: 2rem;
 }
 
 .about-text {
@@ -226,7 +232,7 @@ body {
 }
 .about-text-title {
   margin-bottom: 20px;
-  font-size: 64px;
+  font-size: 2rem;
 }
 .about-image {
   width: 500px;
@@ -239,7 +245,7 @@ body {
 }
 .contact-title {
   margin-top: 50px;
-  font-size: 64px;
+  font-size: 2rem;
   text-align: center;
 }
 
@@ -299,19 +305,19 @@ footer {
   text-align: center;
 }
 
-.testimoni {
+.testimonial {
   margin-bottom: 100px;
   padding: 80px 0;
 }
 
-.testimoni-title {
+.testimonial-title {
   text-align: center;
   font-size: 62px;
   margin-bottom: 50px;
   color: #333;
 }
 
-.testimoni-grid {
+.testimonial-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 30px;
@@ -320,7 +326,7 @@ footer {
   padding: 0 20px;
 }
 
-.testimoni-card {
+.testimonial-card {
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -328,11 +334,11 @@ footer {
   transition: transform 0.3s ease;
 }
 
-.testimoni-card:hover {
+.testimonial-card:hover {
   transform: translateY(-5px);
 }
 
-.testimoni-text {
+.testimonial-text {
   font-size: 16px;
   line-height: 1.6;
   color: #555;
@@ -340,7 +346,7 @@ footer {
   font-style: italic;
 }
 
-.testimoni-author {
+.testimonial-author {
   font-weight: bold;
   color: #333;
   text-align: right;
